crates/control-plane-api/src/server/public/graphql/billing/snapshots/control_plane_api__server__public__graphql__billing__adjustments__tests__adjustments_query_cross_tenant_denied.snap
---
source: crates/control-plane-api/src/server/public/graphql/billing/adjustments.rs
expression: cross
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 13,
          "line": 3
        }
      ],
      "message": "PermissionDenied: adjustother@example.test is not authorized to access prefix or name 'adjustco/' with required capability read",
      "path": [
        "tenant"
      ]
    }
  ]
}
