crates/control-plane-api/src/server/public/graphql/billing/snapshots/control_plane_api__server__public__graphql__billing__adjustments__tests__create_adjustment_bad_month.snap
---
source: crates/control-plane-api/src/server/public/graphql/billing/adjustments.rs
expression: bad_month
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 13,
          "line": 8
        }
      ],
      "message": "billedMonth must be the first instant of a month in UTC, like 2026-07-01T00:00:00Z",
      "path": [
        "createBillingAdjustment"
      ]
    }
  ]
}
