crates/control-plane-api/src/server/public/graphql/billing/snapshots/control_plane_api__server__public__graphql__billing__adjustments__tests__create_adjustment_by_support.snap
---
source: crates/control-plane-api/src/server/public/graphql/billing/adjustments.rs
expression: created
---
{
  "data": {
    "createBillingAdjustment": {
      "adjustment": {
        "authorizer": "support@estuary.test",
        "billedMonth": "2026-07-01T00:00:00+00:00",
        "detail": "make-good for incident",
        "tenant": "adjustco/",
        "usdCents": -5000
      }
    }
  }
}
