crates/control-plane-api/src/server/public/graphql/billing/snapshots/control_plane_api__server__public__graphql__billing__adjustments__tests__create_adjustment_denied_tenant_admin.snap
---
source: crates/control-plane-api/src/server/public/graphql/billing/adjustments.rs
expression: denied
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 13,
          "line": 8
        }
      ],
      "message": "PermissionDenied: adjustco@example.test is not authorized to access prefix or name 'estuary_support/' with required capability admin",
      "path": [
        "createBillingAdjustment"
      ]
    }
  ]
}
