crates/control-plane-api/src/server/public/graphql/billing/snapshots/control_plane_api__server__public__graphql__billing__adjustments__tests__create_adjustment_missing_tenant.snap
---
source: crates/control-plane-api/src/server/public/graphql/billing/adjustments.rs
expression: missing
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 13,
          "line": 8
        }
      ],
      "message": "PermissionDenied: support@estuary.test is not authorized to access prefix or name 'nonexistent/' with required capability EditBilling",
      "path": [
        "createBillingAdjustment"
      ]
    }
  ]
}
