crates/control-plane-api/src/server/public/graphql/billing/snapshots/control_plane_api__server__public__graphql__billing__adjustments__tests__create_adjustment_zero_cents.snap
---
source: crates/control-plane-api/src/server/public/graphql/billing/adjustments.rs
expression: zero
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 13,
          "line": 8
        }
      ],
      "message": "usdCents must be non-zero",
      "path": [
        "createBillingAdjustment"
      ]
    }
  ]
}
